<resources>
    <plurals name="tx_list_ago_hour">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="tx_list_ago_day">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="tx_list_actions">
        <item quantity="one">%d action</item>
        <item quantity="other">%d actions</item>
    </plurals>
    <string name="no_safes_loaded">No Safe Account loaded</string>
    <string name="safe_loaded">Safe Account loaded</string>
    <string name="load_gnosis_safe_start">Get started by loading your Safe Account</string>
    <string name="load_safe_account">Load Safe Account</string>
    <string name="tab_title_coins">COINS</string>
    <string name="tab_title_collectibles">COLLECTIBLES</string>
    <string name="enter_safe_address">Enter Safe Account address</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_safe_name_description">Choose a name for the Safe Account. The name is only stored locally and will not be shared with us or any third parties.</string>
    <string name="next">Next</string>
    <string name="add_safe_label_top">Enter your Safe Account address.</string>
    <string name="add_safe_label_bottom">Don\'t have a Safe Account? Create one first at</string>
    <string name="add_safe_label_link">https://app.safe.global</string>
    <string name="back">Back</string>
    <string name="add_safe_owner_read_only_notice">%1$s is read-only. Would you like to add owner key for this Safe Account to confirm transactions?</string>
    <string name="add_safe_owner_import">Import owner key</string>
    <string name="add_safe_owner_add">Add owner key</string>
    <string name="add_safe_owner_skip">Skip</string>
    <string name="choose_input_method">Choose input method</string>
    <string name="address_input_ens">ENS name</string>
    <string name="address_input_qr_code">Scan QR code</string>
    <string name="address_input_clipboard">Paste from clipboard</string>
    <string name="address_input_address_book">Address book</string>
    <string name="invalid_ethereum_address">Invalid ethereum address</string>
    <string name="error_malformed_address">The address is malformed. Please provide an Ethereum address</string>
    <string name="ens_input_title">Input ENS Name</string>
    <string name="error_invalid_safe">Invalid Safe Account address</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="ok">OK</string>
    <string name="terms_first_bullet">We do not collect demographic data such as age or gender.</string>
    <string name="terms_second_bullet">We collect anonymized app usage data and crash reports to ensure the quality of our app.</string>
    <string name="terms_privacy_policy">Privacy Policy</string>
    <string name="terms_terms_of_use">Terms of Use</string>
    <string name="please_review_terms_and_privacy_policy">Please review our Terms of Use and Privacy Policy.</string>
    <string name="agree_without_sharing_usage_data">Agree without Sharing Usage Data</string>
    <string name="agree">Agree</string>
    <string name="add_safe">Add Safe Account</string>
    <string name="switch_safes">Switch Safe Accounts</string>
    <string name="assets">Assets</string>
    <string name="transactions">Transactions</string>
    <string name="transactions_empty">Transactions will appear here</string>
    <string name="settings">Settings</string>
    <string name="remove_safe">Remove Safe Account</string>
    <string name="error_data_cannot_be_loaded">Data cannot be loaded</string>
    <string name="error_id">Error %1$d</string>
    <string name="error_description_chain_list">Failed to load chains</string>
    <string name="error_description_safe_add">Can\'t add Safe Account</string>
    <string name="error_description_safe_address">Can\'t use this address</string>
    <string name="error_description_safe_name">Can\'t use this name</string>
    <string name="error_description_safe_settings">Failed to load Safe Account settings</string>
    <string name="error_description_safe_settings_advanced">Failed to load advanced Safe Account settings</string>
    <string name="error_description_ens_name">Can\'t use this name</string>
    <string name="error_description_assets_coins">Failed to load balances</string>
    <string name="error_description_assets_coins_send">Failed to create transaction</string>
    <string name="error_description_assets_collectibles">Failed to load collectibles</string>
    <string name="error_description_tx_list">Failed to load transactions</string>
    <string name="error_description_tx_details">Failed to load transaction details</string>
    <string name="error_description_tx_confirmation">Failed to confirm transaction</string>
    <string name="error_description_tx_sign">Failed to sign transaction</string>
    <string name="error_description_tx_exec_balances">Failed to load balances</string>
    <string name="error_description_tx_exec_insufficient_balance">Insufficient balance for network fees</string>
    <string name="error_description_tx_exec_will_fail">This transaction will most likely fail. To save gas costs, avoid executing the transaction.</string>
    <string name="error_description_tx_exec_fails">Internal Safe transaction fails. Please double check whether this transaction is valid with the current state of the Safe.</string>
    <string name="error_description_tx_exec_estimate">Estimation failed</string>
    <string name="error_description_tx_exec_submit">Failed to submit transaction</string>
    <string name="error_description_tx_rejection">Failed to reject transaction</string>
    <string name="error_description_seed_phrase">Can\'t use this seed phrase or private key</string>
    <string name="error_description_fiat">Failed to load supported fiat list</string>
    <string name="error_network_no_internet_reason">device is not connected to the Internet</string>
    <string name="error_network_no_internet_fix">Please try again when Internet is available</string>
    <string name="error_network_ssl_reason">SSL connection failed</string>
    <string name="error_network_ssl_fix">Please try again later</string>
    <string name="error_network_timeout_reason">request timed out after %1$ds</string>
    <string name="error_network_timeout_fix">Please refresh the screen</string>
    <string name="error_network_unknown_host_reason">server not reachable</string>
    <string name="error_network_unknown_host_fix">Please try again when Internet is available</string>
    <string name="error_network_request_reason">request error</string>
    <string name="error_network_request_fix">Please try again later or contact Safe support if the issue persists.</string>
    <string name="error_network_server_side_reason">server-side error</string>
    <string name="error_network_server_side_fix">Please try again later or contact Safe support if the issue persists.</string>
    <string name="error_network_not_authorized_reason">you are not authorized to perform this action</string>
    <string name="error_network_not_authorized_fix">Please contact Safe support if the issue persists</string>
    <string name="error_network_unexpected_reason">network request failed with an unexpected error</string>
    <string name="error_network_unexpected_fix">Please reach out to the Safe support</string>
    <string name="error_network_address_format_invalid_reason">address format is not valid</string>
    <string name="error_network_address_format_invalid_fix">Please reach out to the Safe support</string>
    <string name="error_network_safe_info_not_found_reason">Safe Account info is not found</string>
    <string name="error_network_safe_info_not_found_fix">Please reach out to the Safe support</string>
    <string name="error_network_safe_not_found_reason">Safe Account not found</string>
    <string name="error_network_try_again_fix">Please check that the Safe Account exists on the blockchain</string>
    <string name="error_client_safe_duplicate_reason">a Safe Account with this address has been added already</string>
    <string name="error_client_safe_duplicate_fix">Please use another Safe Account address</string>
    <string name="error_client_safe_name_invalid_reason">this value is not a valid name</string>
    <string name="error_client_safe_name_invalid_fix">Name should not be empty</string>
    <string name="error_client_safe_not_found_reason">Safe Account not found</string>
    <string name="error_client_safe_not_found_fix">Please check that the Safe Account exists on the blockchain</string>
    <string name="error_client_address_invalid_reason">this value is not a valid address</string>
    <string name="error_client_address_invalid_fix">Please use the checksummed Safe Account address</string>
    <string name="error_client_seed_phrase_reason">this is not a valid seed phrase or private key for an Ethereum account</string>
    <string name="error_client_key_already_imported_reason">This key has already been imported</string>
    <string name="coins_asset_send_from">From</string>
    <string name="coins_asset_send_to">To</string>
    <string name="coins_asset_send_amount">Amount</string>
    <string name="settings_app_fiat">Fiat currency</string>
    <string name="settings_app_appearance">Appearance</string>
    <string name="settings_app_terms_of_use">Terms of use</string>
    <string name="settings_app_privacy_policy">Privacy policy</string>
    <string name="settings_app_licenses">Licenses</string>
    <string name="settings_app_version">App version</string>
    <string name="settings_app_network">Network</string>
    <string name="settings_app_advanced">Advanced</string>
    <string name="ens_resolver_address">ENS RESOLVER ADDRESS</string>
    <string name="endpoints">ENDPOINTS</string>
    <string name="rpc_endpoint">RPC endpoint</string>
    <string name="tx_service">Transaction service</string>
    <string name="get_in_touch_title">Help Center</string>
    <string name="get_in_touch_email">E-mail</string>
    <string name="get_in_touch_discord">Discord</string>
    <string name="get_in_touch_twitter">Twitter</string>
    <string name="get_in_touch_help_center">Help center</string>
    <string name="get_in_touch_feature_suggestion">Feature suggestion</string>
    <string name="signing_owner_add_key">Add owner key</string>
    <string name="signing_owner_import_existing_title">Import existing owner key</string>
    <string name="signing_owner_import_existing_desc">Import an existing key or seed phrase</string>
    <string name="signing_owner_create_new_title">Create new owner key</string>
    <string name="signing_owner_create_new_desc">Create a new key that you can use as owner of your Safe Account</string>
    <string name="signing_owner_connect_ledger_title">Connect Ledger Nano X</string>
    <string name="signing_owner_connect_ledger_desc">Add a key from your hardware wallet</string>
    <string name="generate_owner_key_title">Create owner key</string>
    <string name="generate_owner_key_intro_seed_phrase_title">How does it work?</string>
    <string name="generate_owner_key_intro_seed_phrase_desc">To use this app as an owner in the Safe Account, you can create a key and add it as an owner of your Safe Account. When you tap Next, the app will create a new private key from a new unique seed phrase.</string>
    <string name="generate_owner_key_intro_private_key_title">How secure is that?</string>
    <string name="generate_owner_key_intro_private_key_desc">The owner key and the seed phrase are securely stored.</string>
    <string name="generate_owner_key_intro_export_title">How to export?</string>
    <string name="generate_owner_key_intro_export_desc">To export your owner key or seed phrase, navigate to the key details.</string>
</resources>