<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/advanced_app_settings_toolbar"
            style="@style/Toolbar"
            app:title="@string/settings_app_advanced" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Header"
                android:text="@string/ens_resolver_address"/>

            <include
                android:id="@+id/ens"
                layout="@layout/item_eth_address"/>

            <TextView
                style="@style/Header"
                android:text="@string/endpoints"/>

            <io.gnosis.safe.ui.safe.settings.view.EndpointItem
                android:id="@+id/rpc_endpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:endpoint_name="@string/rpc_endpoint" />

            <io.gnosis.safe.ui.safe.settings.view.EndpointItem
                android:id="@+id/tx_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:endpoint_name="@string/tx_service" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
