<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_01">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surface_04">

        <LinearLayout
            android:id="@+id/toolbar_layout"
            style="@style/Toolbar"
            android:orientation="horizontal"
            android:padding="16dp"
            app:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:text="@string/back" />

            <TextView
                android:id="@+id/title"
                style="@style/ToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/signing_owner_add_key" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <io.gnosis.safe.ui.settings.view.SettingItem
                android:id="@+id/item_import_existing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface_01"
                app:setting_name="@string/signing_owner_import_existing_title"
                app:setting_description="@string/signing_owner_import_existing_desc"
                app:setting_openable="true"
                app:setting_image="@drawable/ic_key_type_key_emphasis_high" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_separator_height"
                android:background="@color/separator" />

            <io.gnosis.safe.ui.settings.view.SettingItem
                android:id="@+id/item_create_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface_01"
                app:setting_name="@string/signing_owner_create_new_title"
                app:setting_description="@string/signing_owner_create_new_desc"
                app:setting_openable="true"
                app:setting_image="@drawable/ic_key_type_seed_emphasis_high" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_separator_height"
                android:background="@color/separator" />

            <io.gnosis.safe.ui.settings.view.SettingItem
                android:id="@+id/item_connect_ledger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surface_01"
                app:setting_name="@string/signing_owner_connect_ledger_title"
                app:setting_description="@string/signing_owner_connect_ledger_desc"
                app:setting_openable="true"
                app:setting_image="@drawable/ic_key_type_ledger_emphasis_high" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_separator_height"
                android:background="@color/separator" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
