<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/fiat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:background="@color/white"
                app:setting_name="@string/settings_app_fiat"
                app:setting_openable="true"
                app:setting_value="USD" />

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/appearance"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_name="@string/settings_app_appearance"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_name="@string/settings_app_terms_of_use"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_name="@string/settings_app_privacy_policy"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/licenses"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_name="@string/settings_app_licenses"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/get_in_touch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_name="@string/settings_app_get_in_touch"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_non_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_name="@string/settings_app_version"
                app:setting_openable="false" />

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/network"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_non_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_name="@string/settings_app_network"
                app:setting_openable="false" />

            <io.gnosis.safe.ui.safe.settings.view.SettingItem
                android:id="@+id/advanced"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@color/white"
                app:setting_name="@string/settings_app_advanced"
                app:setting_openable="true" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
