<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/get_in_touch_toolbar"
            style="@style/Toolbar"
            app:title="@string/get_in_touch_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <io.gnosis.safe.ui.settings.view.SettingItem
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:background="@color/white"
                app:setting_image="@drawable/ic_email_24dp"
                app:setting_name="@string/get_in_touch_email"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.settings.view.SettingItem
                android:id="@+id/discord"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_image="@drawable/ic_discord_24dp"
                app:setting_name="@string/get_in_touch_discord"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.settings.view.SettingItem
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_image="@drawable/ic_twitter_24dp"
                app:setting_name="@string/get_in_touch_twitter"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.settings.view.SettingItem
                android:id="@+id/help_center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_image="@drawable/ic_help_center_24dp"
                app:setting_name="@string/get_in_touch_help_center"
                app:setting_openable="true" />

            <io.gnosis.safe.ui.settings.view.SettingItem
                android:id="@+id/feature_suggestion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_openable_height"
                android:layout_marginTop="@dimen/item_setting_separator_size"
                android:background="@color/white"
                app:setting_image="@drawable/ic_feature_suggestion_24dp"
                app:setting_name="@string/get_in_touch_feature_suggestion"
                app:setting_openable="true" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
